fixed nav bar spacing, fixed entry page layout. need to update fonts first supposedley...

--- a/saad-portfolio/src/components/navbar.module.css
+++ b/saad-portfolio/src/components/navbar.module.css
@@ -12,13 +12,11 @@ could be cool if it was in the hero section?*/
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
     border: 1px solid rgba(201, 178, 250, 0.3);
-    height: 4dvh;
 }
 
 .navList {
     display: flex;
-    justify-content: left; /* either center or left(column-gap) */
-    column-gap: 1rem;
+    justify-content: space-around;
     margin: 0;
     padding: 0;
     list-style: none;
